--- a/biblist.bib
+++ b/biblist.bib
@@ -129,3 +129,18 @@ title = {Positive Definite Kernels: Past, Present and Future},
 volume = {4},
 journal = {Dolomite Res. Notes Approx.}
 }
+
+
+
+@article{lenarduzzi-shaback_2017,
+title = {Kernel-based adaptive approximation of functions with discontinuities},
+journal = {Applied Mathematics and Computation},
+volume = {307},
+pages = {113--123},
+year = {2017},
+%issn = {0096-3003},
+doi = {/10.1016/j.amc.2017.02.043},
+%url = {https://www.sciencedirect.com/science/article/pii/S0096300317301546},
+author = {Licia Lenarduzzi and Robert Schaback},
+%keywords = {Kernels, Classification, Localized approximation, Adaptivity, scattered data}
+}
