--- a/thesis.tex
+++ b/thesis.tex
@@ -8,9 +8,9 @@
 
 \enlang
 %\fontfam[garamondgeorgd] \setff{+calt} \typosize[12/14.1818]
-\fontfam[GaramondMT]\load[patches]\let\semibold\bf \typosize[12/14.1818]
-%\fontfam[BaskervilleMT]\load[patches]\let\semibold\bf \typosize[11.9/14.1]
-\load[garamond-math-fix, micro]
+\fontfam[GaramondMT]\let\semibold\bf \typosize[12/14.1818]
+%\fontfam[BaskervilleMT]\let\semibold\bf \typosize[11.9/14.1]
+\load[patches, garamond-math-fix, garamond-micro]
 %\OpTeX
 % We must ensure that . , ; etc are from the same font in text and math mode.
 
@@ -23,6 +23,7 @@
 %\typosize[12.21/14.5]
 
 \parindent 1em
+\iindent=\parindent \ttindent=\parindent
 \parskip 1.5ex
 \rulewidth 0.15ex
 
