Real bold math font instead of fake one

--- a/thesis.tex
+++ b/thesis.tex
@@ -16,6 +16,7 @@
 
 \font\symbols=Diamond % MonotypeSorts
 \def\QED{\hbox{\symbols\resizethefont \,❖}}
+\font\boldmathfont=EBGaramond-SemiBoldItalic
 
 
 \margins/1 a4 (103,97,130,145)pt
