--- a/thesis-mac.tex
+++ b/thesis-mac.tex
@@ -11,6 +11,7 @@
 
 
 \def\theorem{\numberedpar A{\semibold\bf THEOREM}}
+\def\corollary{\numberedpar A{\semibold\bf COROLLARY}}
 \def\proposition{\numberedpar A{\semibold\bf PROPOSITION}}
 \def\lemma{\numberedpar A{\semibold\bf LEMMA}}
 \_def \_theAnum {\_the\_counterA}
