--- a/thesis.tex
+++ b/thesis.tex
@@ -8,8 +8,8 @@
 
 \enlang
 %\fontfam[garamondgeorgd] \setff{+calt} \typosize[12/14.1818]
-\fontfam[GaramondMT]\let\semibold\bf \typosize[12.26/14.5]%\typosize[12/14.1818]
-%\fontfam[BaskervilleMT]\let\semibold\bf \typosize[11.9/14.1]
+\fontfam[GaramondMT]\let\semibold\relax \typosize[12.5/14.7]%\typosize[12/14.1818]
+%\fontfam[BaskervilleMT]\let\semibold\relax \typosize[11.9/14.1]
 \load[patches, garamond-math-fix, garamond-micro]
 %\OpTeX
 % We must ensure that . , ; etc are from the same font in text and math mode.
