--- a/positive-definite-functions.tex
+++ b/positive-definite-functions.tex
@@ -18,7 +18,7 @@ $$
 $$
 is invertible.  The invertibility of~$\Bm A_{Φ,\. X}$ of course depends on the function~$Φ$, so not all functions can be successfully used.   Notice that, if the interpolation matrix is invertible, then the set of functions~$\range B_N/$ are actually a {\em basis} for~$\Cal S_{Φ,\. X}$, since they are linearly independent functions.
 
-Now we let~$X$ vary. If we wish to have a recovery process that works on all of~$\R^d$ and is {\em invariant} under Euclidean transformations, which is a very reasonable request\fnote{In other applications it may be useful to require other kinds of transformational invariances, for instance the rotational invariance if we are working on a sphere in~$\R^d$.  See Shaback~\cite[shaback_1997], chapter~3.} in most of the applications, then the space generating function~$Φ$ can be taken of the simpler form
+Now we let~$X$ vary. If we wish to have a recovery process that works on all of~$\R^d$ and is {\em invariant} under Euclidean transformations, which is a very reasonable request\fnote{In other applications it may be useful to require different kinds of transformational invariances, for instance the rotational invariance if we are working on a sphere in~$\R^d$.  See Shaback~\cite[shaback_1997], chapter~3.} in most of the applications, then the space generating function~$Φ$ can be taken of the simpler form
 $$
 Φ(x,y) = \phi(\norm{x-y})\mathbox{,\quad $x,y\in\Omega$,}\eqmark[phi]
 $$
