--- a/thesis.tex
+++ b/thesis.tex
@@ -14,6 +14,9 @@
 %\OpTeX
 % We must ensure that . , ; etc are from the same font in text and math mode.
 
+%\setmathsizes[10/10/10]
+
+
 \font\symbols=Diamond % MonotypeSorts
 \def\QED{\hbox{\symbols\resizethefont \,❖}}
 \font\boldmathfont=EBGaramond-SemiBoldItalic
