--- a/positive-definite-functions.tex
+++ b/positive-definite-functions.tex
@@ -164,4 +164,4 @@ Finally we notice that every  positive definite radial function~$\phi:[0,\infty)
 $$
 \phi_ε(r) = \phi(ε r),
 $$
-then $\phi_ε$ is still positive definite and radial.  When we attempt to interpolate a set of sampled function values by using a positive definite radial function, the proper choice of the shape parameter has great impact on the accuracy of the result.  There are various techniques that allow for an automatic correct choice of the shape parameter, the most notable being the leave-one-out cross-validation (LOOCV) method (see Rippa~\cite[rippa_1999] and Fassauer~\cite[fasshauer_2011], section~5).  More about this topic will be disclosed in section~\ref[???sec].
+then $\phi_ε$ is still positive definite and radial.  When we attempt to interpolate a set of sampled function values by using a positive definite radial function, the proper choice of the shape parameter has great impact on the accuracy of the result.  There are various techniques that allow for an automatic correct choice of the shape parameter, the most notable being the leave-one-out cross-validation (LOOCV) method (see Rippa~\cite[rippa_1999] and Fassauer~\cite[fasshauer_2011], section~5).  More about this topic will be disclosed in section~\ref[buildingsec].
